Fixed overflow-x

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 * {
     box-sizing: border-box;
 }
+html,body{
+    overflow-x: hidden;
+}
 html {
     scroll-behavior: smooth;
 }
